--- a/tpl/zen/_menu.html
+++ b/tpl/zen/_menu.html
@@ -9,7 +9,7 @@
             <button class="vertical-nav--item"><img class="icon" alt="Home" src="img/home.svg"/></button>
             <div class="vertical-nav--arrow"><img class="icon" alt="Settings" src="img/arrow.svg"/></div>
             <button class="vertical-nav--item"><img class="icon" alt="Feeds" src="img/list.svg"/></button>
-            <button class="vertical-nav--item"><img class="icon" alt="Settings" src="img/settings.svg"/></button>
+            <a href="settings.php" class="vertical-nav--item"><img class="icon" alt="Settings" src="img/settings.svg"/></a>
             <button class="vertical-nav--item"><img class="icon" alt="More" src="img/plus_big.svg"/></button>
         </nav>
     </div>
