--- a/tpl/zen/_menu.html
+++ b/tpl/zen/_menu.html
@@ -6,7 +6,7 @@
         </div>
         
         <nav class="menu--nav vertical-nav">
-            <button class="vertical-nav--item"><img class="icon" alt="Home" src="img/home.svg"/></button>
+            <a href="/" class="vertical-nav--item"><img class="icon" alt="Home" src="img/home.svg"/></a>
             <div class="vertical-nav--arrow"><img class="icon" alt="Settings" src="img/arrow.svg"/></div>
             <button class="vertical-nav--item"><img class="icon" alt="Feeds" src="img/list.svg"/></button>
             <a href="settings.php" class="vertical-nav--item"><img class="icon" alt="Settings" src="img/settings.svg"/></a>
