--- a/tpl/zen/_article.html
+++ b/tpl/zen/_article.html
@@ -3,12 +3,12 @@
 {* Requires $value to be an article.  *}
 
 {$entry_feed=get_feed_from_entry($value, $feeds)}
-<article class="article">
+<article class="article" id="entry-{$value['id']}">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
             <button class="horizontal-nav--item"><img class="icon" alt="More" src="img/plus.svg"/></button>
             <button class="horizontal-nav--item"><img class="icon" alt="Share" src="img/share.svg"/></button>
-            <button class="horizontal-nav--item"><img class="icon" alt="Close" src="img/close.svg"/></button>
+            <button class="horizontal-nav--item close-btn"><img class="icon" alt="Close" src="img/close.svg"/></button>
         </nav>
         <h1 class="article--title">{$value['title']}</h1>
         <h2 class="article--info">{$entry_feed['title']}</h2>
