--- a/tpl/zen/_submenu.html
+++ b/tpl/zen/_submenu.html
@@ -6,41 +6,53 @@
             <img class="searchbar--icon" alt="" src="img/search.svg"/>
         </div>
 
-        <div class="submenu--section">
-            <h4 class="submenu--section-title">News</h4>
-            <ul class="submenu--link-list">
-                <li>The Times <span class="coutner">23</span></li>
-                <li>LinuxFr <span class="coutner">9</span></li>
-                <li>Le Monde <span class="coutner">2</span></li>
-            </ul>
-        </div>
+        <section id="submenu-list">
 
-        <div class="submenu--section">
-            <h4 class="submenu--section-title">Blogs</h4>
-            <ul class="submenu--link-list">
-                <li>Korben <span class="coutner">3</span></li>
-                <li>Le Hollandais volant <span class="coutner">1</span></li>
-                <li>Coding Horror <span class="coutner"></span></li>
-                <li>Sam &amp; Max <span class="coutner"></span></li>
-                <li>sebsauvage <span class="coutner"></span></li>
-            </ul>
-        </div>
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">News</h4>
+                <ul class="submenu--link-list">
+                    <li>The Times <span class="coutner">23</span></li>
+                    <li>LinuxFr <span class="coutner">9</span></li>
+                    <li>Le Monde <span class="coutner">2</span></li>
+                </ul>
+            </div>
 
-        <div class="submenu--section">
-            <h4 class="submenu--section-title">Comics</h4>
-            <ul class="submenu--link-list">
-                <li>bouletcorp <span class="coutner">5</span></li>
-                <li>xkcd <span class="coutner">2</span></li>
-                <li>Humeurs illustrées <span class="coutner">1</span></li>
-            </ul>
-        </div>
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">Blogs</h4>
+                <ul class="submenu--link-list">
+                    <li>Korben <span class="coutner">3</span></li>
+                    <li>Le Hollandais volant <span class="coutner">1</span></li>
+                    <li>Coding Horror <span class="coutner"></span></li>
+                    <li>Sam &amp; Max <span class="coutner"></span></li>
+                    <li>sebsauvage <span class="coutner"></span></li>
+                </ul>
+            </div>
 
-        <div class="submenu--section">
-            <h4 class="submenu--section-title">Misc</h4>
-            <ul class="submenu--link-list">
-                <li>À lire ailleurs <span class="coutner">7</span></li>
-                <li>Debian Security Updates <span class="coutner"></span></li>
-            </ul>
-        </div>
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">Comics</h4>
+                <ul class="submenu--link-list">
+                    <li>bouletcorp <span class="coutner">5</span></li>
+                    <li>xkcd <span class="coutner">2</span></li>
+                    <li>Humeurs illustrées <span class="coutner">1</span></li>
+                </ul>
+            </div>
+
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">Misc</h4>
+                <ul class="submenu--link-list">
+                    <li>À lire ailleurs <span class="coutner">7</span></li>
+                    <li>Debian Security Updates <span class="coutner"></span></li>
+                </ul>
+            </div>
+
+        </section>
+
+        <section id="submenu-more">
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">Foo</h4>
+                <a href="refresh.php?token={function="generate_token('refresh')"}">Synchronize</a>
+            </div>
+        </section>
+
     </div>
 </aside>
