--- a/tpl/zen/_menu.html
+++ b/tpl/zen/_menu.html
@@ -26,7 +26,7 @@
             <div class="vertical-nav--arrow"><img class="icon" alt="Settings" src="img/arrow.svg"/></div>
             {/if}
             
-            <button class="vertical-nav--item"><img class="icon" alt="Feeds" src="img/list.svg"/></button>
+            <button class="vertical-nav--item toggle-submenu" id="open-submenu-list"><img class="icon" alt="Feeds" src="img/list.svg"/></button>
 
             {if="$active_menu=='settings'"}
             <div class="vertical-nav--arrow"><img class="icon" alt="Settings" src="img/arrow.svg"/></div>
@@ -38,7 +38,7 @@
             <div class="vertical-nav--arrow"><img class="icon" alt="Settings" src="img/arrow.svg"/></div>
             {/if}
             
-            <button class="vertical-nav--item"><img class="icon" alt="More" src="img/plus_big.svg"/></button>
+            <button class="vertical-nav--item toggle-submenu" id="open-submenu-more"><img class="icon" alt="More" src="img/plus_big.svg"/></button>
         </nav>
 
         {/if}
