--- a/tpl/zen/_begin.html
+++ b/tpl/zen/_begin.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Freeder</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
     	{include="_menu"}
