--- a/tpl/zen/refresh.html
+++ b/tpl/zen/refresh.html
@@ -1,12 +1,15 @@
 {$active_menu=''}
 {include="_begin"}
 
+{$empty_var=refresh_feeds($feeds_to_refresh)}
+
 <article class="article">
     <div class="article--wrapper">
         <h1 class="article--title">Synchronizing…</h1>
         <h2 class="article--info">Please wait while your feeds are being refreshed</h2>
         <div class="article--content">
             <p>
+                {$empty_var=refresh_feeds($feeds_to_refresh)}
                 You will be redirected to <a href="/">homepage</a> in 2s.
             </p>
             <script type="text/javascript">
