--- a/tpl/zen/_begin.html
+++ b/tpl/zen/_begin.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+    	{include="_modal"}
     	{include="_menu"}
     	{include="_submenu"}
     	<main class="main">
