--- a/tpl/zen/settings.html
+++ b/tpl/zen/settings.html
@@ -23,7 +23,9 @@
 <article class="article" id="tab-feeds">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Feeds</h2>
         <div class="article--content">
@@ -37,7 +39,9 @@
 <article class="article" id="tab-entries">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Entries</h2>
         <div class="article--content">
@@ -51,7 +55,9 @@
 <article class="article" id="tab-import">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Import/Export</h2>
         <div class="article--content">
@@ -65,7 +71,9 @@
 <article class="article" id="tab-sync">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Sync</h2>
         <div class="article--content">
@@ -79,7 +87,9 @@
 <article class="article" id="tab-template">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Template</h2>
         <div class="article--content">
@@ -93,7 +103,9 @@
 <article class="article" id="tab-users">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Users</h2>
         <div class="article--content">
@@ -107,7 +119,9 @@
 <article class="article" id="tab-sharing">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Sharing</h2>
         <div class="article--content">
@@ -121,7 +135,9 @@
 <article class="article" id="tab-misc">
     <div class="article--wrapper">
         <nav class="article--nav horizontal-nav">
-            <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            <div class="article--nav-wrapper">
+                <a href="#top#" class="horizontal-nav--item"><img class="icon" alt="Top" src="img/top.svg"/></a>
+            </div>
         </nav>
         <h2 class="article--info">Misc</h2>
         <div class="article--content">
