Add viewport in zen tpl

--- a/tpl/zen/_begin.html
+++ b/tpl/zen/_begin.html
@@ -2,13 +2,14 @@
 {* There must be nothing before it in your template. *}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Freeder</title>
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-    	{include="_modal"}
-    	{include="_menu"}
-    	{include="_submenu"}
-    	<main class="main">
+	<head>
+		<meta charset="utf-8">
+		<title>Freeder</title>
+		<link rel="stylesheet" href="css/main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+	<body>
+		{include="_modal"}
+		{include="_menu"}
+		{include="_submenu"}
+		<main class="main">
