Add paging to zen theme

--- a/tpl/zen/_submenu.html
+++ b/tpl/zen/_submenu.html
@@ -26,7 +26,7 @@
             <div class="submenu--section">
                 <h4 class="submenu--section-title">Synchronization</h4>
 				<p>
-					<a href="refresh.php?token={function="generate_token('refresh')"}">Synchronize</a>
+					<a href="refresh.php?token={function="generate_token('refresh')"}">Update feeds</a>
 				</p>
             </div>
             <div class="submenu--section">
