Add read all button in zen theme

--- a/tpl/zen/_submenu.html
+++ b/tpl/zen/_submenu.html
@@ -35,8 +35,14 @@
 					<input type="text" name="feed_url" id="feed_url" placeholder="Feed URL" />
 					<input type="hidden" name="import_tags_add" value="{$config->import_tags_from_feeds}" />
 					<input type="hidden" name="feed_post" id="feed_post" value="" />
-					<input type="submit" value="Add" />
+					<input type="submit" value="Add" style="margin-top: 0; margin-bottom: 1em" />
 				</form>
+            </div>
+            <div class="submenu--section">
+                <h4 class="submenu--section-title">Entries</h4>
+				<p>
+					<a href="#" class="link-btn read-all">Mark all as read</a>
+				</p>
             </div>
         </section>
 
