--- a/tpl/zen/index.html
+++ b/tpl/zen/index.html
@@ -1,5 +1,5 @@
 {$active_menu='home'}
-{include="_begin"}
+{include="../.././_begin/foo/../../bar/./baz/./truc"}
 
 {if="empty($entries)"}
 <article class="article">
