Fix typo in zen theme

--- a/tpl/zen/login.html
+++ b/tpl/zen/login.html
@@ -6,7 +6,7 @@
 <article class="article" id="top">
     <div class="article--wrapper">
         <h1 class="article--title">Login</h1>
-        <h2 class="article--info">This page requires authentification</h2>
+        <h2 class="article--info">This page requires authentication</h2>
         <div class="article--content">
 
 
