Fix zen theme paging

--- a/tpl/zen/index.html
+++ b/tpl/zen/index.html
@@ -27,8 +27,8 @@
     <div class="article--wrapper">
 		<div class="article--content">
 			<p class="page-nav">
-				{if="$page > 0"}<a href="?p={$page-1}" class="page-nav--newer">Newer entries</a>{/if}
-				{if="$page < $nb_pages - 1"}<a href="?p={$page+1}" class="page-nav--older">Older entries</a>{/if}
+				{if="$page > 1"}<a href="?p={$page-1}" class="page-nav--newer">Newer entries</a>{/if}
+				{if="$page < $nb_pages"}<a href="?p={$page+1}" class="page-nav--older">Older entries</a>{/if}
 				Page {$page} of {$nb_pages}
 			</p>
 		</div>
